<resources>
    <string name="app_name">DDApp</string>

    <string name="dialog_show_normal">弹出普通弹窗</string>
    <string name="dialog_show_feedback">弹出反馈弹窗</string>
    <string name="dialog_show_bind_phone">弹出手机绑定弹窗</string>


    <string name="go_to_dialog">Go to Dialog</string>
    <string name="go_to_recycle">Go to Recycle</string>
    <string name="go_to_baidu_map">Go to BaiDu Map</string>
    <string name="go_to_camera">Go to Camera</string>
    <string name="go_to_widget">Go to Widget</string>
    <string name="go_to_home">Go to Home</string>
    <string name="go_to_main">Go to Main</string>
    <string name="go_to_rating">Go to Rating</string>
    <string name="go_to_test">Go to Test</string>

    <string name="dialog_bind_phone_title">绑定手机号</string>
    <string name="dialog_bind_phone_content">为了更好的享用本App服务，\n请先绑定手机号</string>
    <string name="dialog_bind_phone_btn">立即绑定</string>
</resources>